--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@ai-sdk/deepseek": "0.1.3",
     "@ai-sdk/google": "0.0.52",
     "@ai-sdk/mistral": "0.0.43",
+    "@babel/runtime": "^7.25.0",
     "@ai-sdk/openai": "1.1.2",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/ui-utils": "^1.2.11",
